# bird-api

./: Dockerfile  LICENSE  app.py  pyproject.toml
templates/: upload.html
